[workspace]
members = ["adafruit-featherwing-oled128x64", "sh1107", "promicro-rp2040-boilerplate"]

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"

[patch.crates-io]
#rp2040-hal = { path = "../vendor/rp-hal/rp2040-hal" }
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal" }
embedded-hal-async = { git = "https://github.com/rust-embedded/embedded-hal" }
