[workspace]
members = [
  "adafruit-featherwing-oled128x64",
  "sh1107",
  "promicro-rp2040-boilerplate",
  "pico-explorer-boilerplate",
  "rpi-pico-boilerplate",
]

[profile.release]
debug = 1
lto = false
codegen-units = 1
panic = "abort"
opt-level = 2

[patch.crates-io]
embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal" }
embedded-hal-async = { git = "https://github.com/rust-embedded/embedded-hal" }

[patch.'https://github.com/ithinuel/rp2040-async-i2c']
rp2040-async-i2c = { path = "../rp2040-async-i2c" }

