[package]
name = "adafruit-featherwing-oled128x64"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Driver for Adafruit FeatherWing OLED 128x64 display"
homepage = "https://github.com/ithinuel/sh1107-rs"
repository = "https://github.com/ithinuel/sh1107-rs"

[dependencies]
embedded-graphics = { version = "0.8.1", optional = true }
embedded-hal = { version = "1.0.0-rc.1", optional = true }
embedded-hal-async = "1.0.0-rc.1"
itertools = { version = "0.11.0", default-features = false, optional = true }
sh1107 = { version = "0.1.0", path = "../sh1107" }

[dev-dependencies]
cfg-if = "1"

cortex-m = "0.7.7"
cortex-m-rt = "0.7"

embedded-hal = { version = "1.0.0-rc.1" }

promicro-rp2040-boilerplate = { path = "../promicro-rp2040-boilerplate" }
pico-explorer-boilerplate = { path = "../pico-explorer-boilerplate" }
pico-explorer-pio-boilerplate = { path = "../pico-explorer-pio-boilerplate" }
pico-explorer-minimal-boilerplate = { path = "../pico-explorer-minimal-boilerplate" }
rpi-pico-boilerplate = { path = "../rpi-pico-boilerplate" }

arrayvec = { version = "0.7.4", default-features = false }
nostd_async = { version = "0.6.1", features = ["cortex_m"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"

futures = { version = "0.3.29", default-features = false, features = [
  "async-await",
] }

[features]
promicro = []
pico-explorer = []
pico-explorer-pio = []
pico-explorer-minimal = []
rpi-pico = []
embedded-graphics = ["dep:embedded-graphics", "embedded-hal", "itertools"]

[[example]]
name = "embedded-graphics"
required-features = ["embedded-graphics"]
