[package]
name = "adafruit-featherwing-oled128x64"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Driver for Adafruit FeatherWing OLED 128x64 display"
homepage = "https://github.com/ithinuel/sh1107-rs"
repository = "https://github.com/ithinuel/sh1107-rs"

[dependencies]
embedded-graphics = { version = "0.8.1", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = "1.0.0"
itertools = { version = "0.11.0", default-features = false, optional = true }
sh1107 = { version = "0.1.0", path = "../sh1107" }

[dev-dependencies]
cfg-if = "1"

cortex-m = "0.7.7"
cortex-m-rt = "0.7"

embedded-hal = { version = "1.0.0" }
critical-section = "1.1.2"
fugit = "0.3.7"
rp2040-async-i2c = { git = "https://github.com/ithinuel/rp2040-async-i2c" }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

arrayvec = { version = "0.7.4", default-features = false }
nostd_async = { version = "0.6.1", features = ["cortex_m"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"

futures = { version = "0.3.29", default-features = false, features = [
  "async-await",
] }

pimoroni-pico-explorer = { version = "0.7.0" }
rp-pico = { version = "0.8.0" }
sparkfun-pro-micro-rp2040 = { version = "0.7.0" }
rp2040-hal = { version = "0.9.2", features = ["i2c-write-iter"] }

[features]
promicro = []
promicro-pio = []
pico-explorer = []
pico-explorer-pio = []
pico-explorer-minimal = []
rpi-pico = []
embedded-graphics = ["dep:embedded-graphics", "embedded-hal", "itertools"]

[[example]]
name = "embedded-graphics"
required-features = ["embedded-graphics"]
