[package]
name = "pico-explorer-minimal-boilerplate"
version = "0.1.0"
edition = "2021"
# demo crate, not meant to be published
publish = false

[dependencies]
defmt = "0.3.2"
embedded-hal-async = "0.1.0-alpha.1"
fugit = "0.3.6"
futures = { version = "0.3.24", default-features = false  }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
pimoroni-pico-explorer = "0.4.0"
rp2040-async-i2c = { git = "https://github.com/ithinuel/rp2040-async-i2c", rev = "ce573d39a1761c32164d19fd90f0419c203ad23f" }
sh1107 = { version = "0.1.0", path = "../sh1107" }
