[package]
name = "pico-explorer-minimal-boilerplate"
version = "0.1.0"
edition = "2021"
# demo crate, not meant to be published
publish = false

[dependencies]
defmt = "0.3.5"
embedded-hal-async = "1.0.0-rc.1"
fugit = "0.3.7"
futures = { version = "0.3.29", default-features = false  }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
pimoroni-pico-explorer = "0.7.0"
rp2040-async-i2c = { git = "https://github.com/ithinuel/rp2040-async-i2c", features = ["pio"] }
sh1107 = { version = "0.1.0", path = "../sh1107" }
