[package]
name = "promicro-rp2040-boilerplate"
version = "0.1.0"
edition = "2021"
# demo crate, not meant to be published
publish = false

[dependencies]
critical-section = "1.1.0"
defmt = "0.3.2"
embedded-hal-async = "0.2.0-alpha.0"
fugit = "0.3.6"
futures = { version = "0.3.24", default-features = false }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp2040-async-i2c = { git = "https://github.com/ithinuel/rp2040-async-i2c", rev = "123a72c703efe6569f5c7e619f922b5221a93271" }
sh1107 = { version = "0.1.0", path = "../sh1107" }
sparkfun-pro-micro-rp2040 = "0.4.0"
