[package]
name = "rpi-pico-boilerplate"
version = "0.1.0"
edition = "2021"
# demo crate, not meant to be published
publish = false

[dependencies]
critical-section = "1.1.2"
defmt = "0.3.5"
embedded-hal-async = "1.0.0-rc.1"
fugit = "0.3.7"
futures = { version = "0.3.29", default-features = false  }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rp-pico = "0.8.0"
rp2040-async-i2c = { git = "https://github.com/ithinuel/rp2040-async-i2c" }
sh1107 = { version = "0.1.0", path = "../sh1107" }
