[package]
name = "sh1107"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Driver for the SH1107 DotMatrix OLED/PLED controller"
homepage = "https://github.com/ithinuel/sh1107-rs"
repository = "https://github.com/ithinuel/sh1107-rs"

[dependencies]
either = { version = "1.9.0", default-features = false }
itertools = { version = "0.11.0", default-features = false }
embedded-hal-async = "1.0.0-rc.1"
defmt = { version = "0.3.5", optional = true }
